[workspace]
members = [
    "dalla_token",
    "beli_nft",
    "simple_dao",
    "faucet",
    "hello-belizechain",
]

resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["BelizeChain Team <dev@belizechain.io>"]
edition = "2021"
license = "MIT"
homepage = "https://belizechain.io"
repository = "https://github.com/BelizeChain/gem"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
