# GEM (General Ecosystem Machinery) - Virtual Workspace
#
# This file provides workspace-level configuration for the GEM project.
# Individual contracts are self-contained and can be built independently.
#
# NOTE: Each ink! contract is its own workspace and must be built separately.
# This file only provides shared profile configuration.
#
# Build individual contracts:
#   cd <contract> && cargo contract build
#

# This workspace section is intentionally minimal to avoid conflicts
# with individual contract workspaces
[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true

