[package]
name = "hello_belizechain"
version = "0.1.0"
authors = ["BelizeChain Core Team <dev@belizechain.org>"]
edition = "2021"

# Prevent workspace confusion with parent Cargo.toml
[workspace]

[dependencies]
ink = { version = "5.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
