[package]
name = "psp37_multi_token"
version = "1.0.0"
authors = ["BelizeChain Team <dev@belizechain.io>"]
edition = "2021"
license = "MIT"
homepage = "https://belizechain.io"
repository = "https://github.com/BelizeChain/gem"

[workspace]

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "5.1.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
